--- a/templates/hall.html
+++ b/templates/hall.html
@@ -33,7 +33,7 @@
         <thead>
           <tr>
             <th>Student</th>
-            <th>Hall</th>
+            <th>Hall`</th>
             <th>Room</th>
             <th>Status</th>
             <th>Action</th>
