--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <nav class="nav">
         <a class="nav-link" href="#features">Features</a>
         <a class="nav-link" href="#how">How it Works</a>
-        <a class="button button-primary" href="{{ url_for('login') }}">Log in</a>
+        <a class="button button-login" href="{{ url_for('login') }}">Log in</a>
       </nav>
     </div>
   </header>
