added some pictures

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 /* Design system */
 :root {
-  --bg: #F5E9DC;
+  --bg: #dfcfbe;
   --surface: #7A3723;
   --surface-2: #f5f0e8;
   --text: #1f2937;
